@@ -1,0 +1,13 @@
+[Theme]
+engine = jinja
+parent = base-jinja
+author = The Nikola Contributors
+author_url = https://getnikola.com/
+based_on = Bootstrap 3 <http://getbootstrap.com/>
+license = MIT
+tags = bootstrap
+
+[Family]
+family = bootstrap3
+mako_version = bootstrap3
+variants = bootstrap3-gradients, bootstrap3-gradients-jinja
