@@ -4,6 +4,7 @@ New in master
 Features
 --------
 
+* Use ``.theme`` files to store theme metadata (Issue #2758)
 * New ``add_header_permalinks`` filter, for Sphinx-style header links
   (Issue #2636)
 * Added alternate links for gallery translations (Issue #993)
